--- a/bmi_project/static/css/style.css
+++ b/bmi_project/static/css/style.css
@@ -1,19 +1,19 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
     margin: 0;
     padding: 0;
 }
 
 h1 {
     text-align: center;
-    color: #4CAF50;
+    color: #4caf50;
 }
 
 form {
     width: 50%;
     margin: auto;
-    background-color: #FFF;
+    background-color: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -26,26 +26,26 @@ label {
     margin-bottom: 10px;
 }
 
-input[type=number] {
+input[type="number"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #CCC;
+    border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
     margin-bottom: 20px;
 }
 
-button[type=submit] {
-    background-color: #4CAF50;
-    color: #FFF;
+button[type="submit"] {
+    background-color: #4caf50;
+    color: #fff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
 }
 
-button[type=submit]:hover {
-    background-color: #3E8E41;
+button[type="submit"]:hover {
+    background-color: #3e8e41;
 }
 
 p {
